[package]
name = "tuikit"
version = "0.2.8"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "Toolkit for writing TUI applications"
documentation = "https://docs.rs/tuikit"
homepage = "https://github.com/lotabout/tuikit"
repository = "https://github.com/lotabout/tuikit"
readme  = "README.md"
keywords = ["tui", "terminal", "tty", "color"]
license = "MIT"
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
nix = "0.14.0"
bitflags = "1.0.4"
term = "0.5.1"
unicode-width = "0.1.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.6.1"
