[package]
name = "tuikit"
version = "0.3.1"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = """
Toolkit for writing TUI applications. Highlights:

- Thread safe.
- Support non-fullscreen mode as well as fullscreen mode.
- Support Alt keys, mouse events, etc.
- Buffering for efficient rendering.
"""
documentation = "https://docs.rs/tuikit"
homepage = "https://github.com/lotabout/tuikit"
repository = "https://github.com/lotabout/tuikit"
readme  = "README.md"
keywords = ["tui", "terminal", "tty", "color"]
license = "MIT"
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
nix = "0.14.0"
bitflags = "1.0.4"
term = "0.6"
unicode-width = "0.1.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.6.1"
